volume allocator